--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,10 @@ h1, h2, h3, h4, h5, h6 {
   color: #333;
 }
 
+.heading text-center col-sm-8 col-sm-offset-2 wow fadeInUp {
+  padding-bottom: 0px;
+}
+
 h2 {
   font-size: 30px;
   margin-bottom: 20px;
@@ -349,9 +353,13 @@ section {
   padding: 0;
 }
 
+.clearfix {
+  padding-top: 0%;
+}
+
 .alb {
-  padding-bottom: 3px;
-  padding-top: 0px;
+  padding-bottom: 0px;
+  padding-top: 0;
 }
 
 #portfolio .folio-item {
